Improve linear model
LinearModelAnalysis:
Creates a new LinearModelAnalysis::getResidualsStandardError() method.
New HTML Python pretty-print.

LinearModelResult:
Creates new LinearModelResult.getDesign() and LinearModelResult.getResidualsVariance() methods. These are attributes of the class which had no corresponding get methods.
Creates a new LinearModelResult::__repr_markdown__() method.

--- a/python/src/FunctionalChaosAlgorithm_doc.i.in
+++ b/python/src/FunctionalChaosAlgorithm_doc.i.in
@@ -195,6 +195,7 @@ Create the chaos algorithm:
 Get the result:
 
 >>> functionalChaosResult = algo.getResult()
+>>> # print(functionalChaosResult)  # Pretty-print
 >>> metamodel = functionalChaosResult.getMetaModel()
 
 Test it:
