--- a/python/test/CMakeLists.txt
+++ b/python/test/CMakeLists.txt
@@ -498,7 +498,7 @@ endif ()
 ot_pyinstallcheck_test (LogUniform_std)
 ot_pyinstallcheck_test (LogUniformFactory_std)
 ot_pyinstallcheck_test (OrderStatisticsMarginalChecker_std)
-#ot_pyinstallcheck_test (MarginalDistribution_std)
+ot_pyinstallcheck_test (MarginalDistribution_std)
 ot_pyinstallcheck_test (MarshallOlkinCopula_std)
 ot_pyinstallcheck_test (MaximumDistribution_std)
 ot_pyinstallcheck_test (MaximumEntropyOrderStatisticsDistribution_std)
