--- a/python/src/BayesDistribution_doc.i.in
+++ b/python/src/BayesDistribution_doc.i.in
@@ -1,40 +1,38 @@
 %feature("docstring") OT::BayesDistribution
 "Bayes distribution.
 
-Helper class for defining the distribution of the random vector :math:`(\vect{X},\vect{Y})` where :math:`\vect{Y}` follows the distribution :math:`\mathcal{L}_{\vect{Y}}` and :math:`\vect{X}|\vect{\Theta}` follows the distribution :math:`\mathcal{L}_{\vect{X}|\vect{\Theta}}`  where :math:`\vect{\Theta}=g(\vect{Y})` with :math:`g` a given function of input dimension the dimension of :math:`\mathcal{L}_{\vect{Y}}` and output dimension the dimension of :math:`\vect{\Theta}`.
-
-Available constructors:
-   BayesDistribution(*conditionedDist, conditioningDist, linkFunction*)
-
-   BayesDistribution(*conditionedDist, conditioningDist*)
-
-   BayesDistribution()
+Helper class for defining the distribution of the random vector :math:`(\vect{Y},\vect{X})`
+where :math:`\vect{Y}` follows the distribution :math:`\mathcal{L}_{\vect{Y}}`
+and :math:`\vect{X}|\vect{\Theta}` follows the distribution :math:`\mathcal{L}_{\vect{X}|\vect{\Theta}}`
+where :math:`\vect{\Theta}=g(\vect{Y})` with :math:`g` a given function of input dimension
+the dimension of :math:`\mathcal{L}_{\vect{Y}}` and output dimension the dimension of :math:`\vect{\Theta}`.
 
 Parameters
 ----------
-
-conditionedDist : :class:`~openturns.Distribution`, the distribution of :math:`\vect{X}|\vect{\Theta}`, whose parameters will be overwritten by :math:`g(\vect{Y})`.
-    In the `BayesDistribution()` constructor, `conditionedDist` is taken equal to :math:`\vect{X} | \vect{\Theta} \sim` :class:`~openturns.Uniform` :math:`(\vect{\Theta})`.
-
-conditioningDist : :class:`~openturns.Distribution`, the distribution of :math:`\vect{Y}`, specified with its parameters.
-    In the `BayesDistribution()` constructor,  `conditioningDist` is taken equal to :math:`\vect{Y} \sim Uniform(-1,1)`.
-
-linkFunction : :class:`~openturns.Function`, the function :math:`g: \Rset^p \rightarrow \Rset^q`, where :math:`p` is the dimension of `conditioningDist` and :math:`q` is the dimension of :math:`\vect{\Theta}`.
-    In the `BayesDistribution()` constructor, `linkFunction`  is taken equal to :math:`g: \Rset \rightarrow \Rset^2`, :math:`g(y)=(y,y+1)`.
-    In the `BayesDistribution(conditionedDist, conditioningDist)` constructor, we need :math:`p=q` and `linkFunction`  is taken equal to  :math:`g(\vect{y})=\vect{y}`.
-
+conditionedDist : :class:`~openturns.Distribution`
+    The distribution of :math:`\vect{X}|\vect{\Theta}`, whose parameters will be overwritten by :math:`g(\vect{Y})`.
+conditioningDist : :class:`~openturns.Distribution`
+    The distribution of :math:`\vect{Y}`, specified with its parameters.
+linkFunction : :class:`~openturns.Function`, optional
+    The function :math:`g: \Rset^p \rightarrow \Rset^q`, where :math:`p` is the dimension of `conditioningDist`
+    and :math:`q` is the dimension of :math:`\vect{\Theta}`.
+    By default it is chosen as the identity function.
 
 Notes
 -----
-This distribution is limited to the continuous case, ie when both the conditioning and the conditioned distributions are continuous. Its probability density function is defined as:
+This distribution is limited to the continuous case, ie when both the conditioning and the conditioned distributions are continuous.
+Its probability density function is defined as:
 
 .. math::
 
-    f_{(\vect{X}, \vect{Y})}(\vect{x}, \vect{y}) = f_{\vect{X}|\vect{\Theta}=g(\vect{y})}(\vect{x}|g(\vect{y})) f_{\vect{Y}}( \vect{y})
+    f_{(\vect{Y}, \vect{X})}(\vect{y}, \vect{x}) = f_{\vect{X}|\vect{\Theta}=g(\vect{y})}(\vect{x}|g(\vect{y})) f_{\vect{Y}}( \vect{y})
 
-with  :math:`f_{\vect{X}|\vect{\Theta}=g(\vect{y})}` the PDF of the distribution of :math:`\vect{X}|\vect{\Theta}`, where :math:`\vect{\Theta}` has been replaced by :math:`g(\vect{y})`, :math:`f_{\vect{Y}}` the PDF of :math:`\vect{Y}` and :math:`g` the linking function.
+with :math:`f_{\vect{X}|\vect{\Theta}=g(\vect{y})}` the PDF of the distribution of :math:`\vect{X}|\vect{\Theta}`,
+where :math:`\vect{\Theta}` has been replaced by :math:`g(\vect{y})`,
+:math:`f_{\vect{Y}}` the PDF of :math:`\vect{Y}` and :math:`g` the linking function.
 
-With the default constructor, the resulting random vector :math:`(X,Y)` is uniformly distributed on the parallelogram which vertices are :math:`(-1,-1); (0,-1); (2,1); (1,1)`.
+With the default constructor, the resulting random vector :math:`(Y,X)` is uniformly
+distributed on the parallelogram which vertices are :math:`(-1,-1); (0,-1); (2,1); (1,1)`.
 
 
 Examples
@@ -69,7 +67,8 @@ conditionedDistribution : :class:`~openturns.Distribution`, the distribution of 
 
 Returns
 -------
-conditioningDistribution : :class:`~openturns.Distribution`, the distribution of :math:`\vect{Y}`, specified with its parameters.
+conditioningDistribution : :class:`~openturns.Distribution`
+    The distribution of :math:`\vect{Y}`, specified with its parameters.
 "
 // ---------------------------------------------------------------------
 
@@ -78,7 +77,9 @@ conditioningDistribution : :class:`~openturns.Distribution`, the distribution of
 
 Returns
 -------
-linkFunction : :class:`~openturns.Function`, the function :math:`g: \Rset^p \rightarrow \Rset^q`, where :math:`p` is the dimension of `conditioningDist` and :math:`q` is the dimension of :math:`\vect{\Theta}`.
+linkFunction : :class:`~openturns.Function`
+    The function :math:`g: \Rset^p \rightarrow \Rset^q`, where :math:`p` is the dimension
+    of `conditioningDist` and :math:`q` is the dimension of :math:`\vect{\Theta}`.
 "
 
 // ---------------------------------------------------------------------
@@ -88,7 +89,9 @@ linkFunction : :class:`~openturns.Function`, the function :math:`g: \Rset^p \rig
 
 Parameters
 ----------
-conditionedDistribution : :class:`~openturns.Distribution`, the distribution of :math:`\vect{X}|\vect{\Theta}`, whose parameters will be overwritten by :math:`g(\vect{Y})`.
+conditionedDistribution : :class:`~openturns.Distribution`
+    The distribution of :math:`\vect{X}|\vect{\Theta}`,
+    whose parameters will be overwritten by :math:`g(\vect{Y})`.
 "
 
 // ---------------------------------------------------------------------
@@ -98,7 +101,8 @@ conditionedDistribution : :class:`~openturns.Distribution`, the distribution of 
 
 Parameters
 ----------
-conditioningDistribution : :class:`~openturns.Distribution`, the distribution of :math:`\vect{Y}`, specified with its parameters.
+conditioningDistribution : :class:`~openturns.Distribution`
+    The distribution of :math:`\vect{Y}`, specified with its parameters.
 "
 // ---------------------------------------------------------------------
 
@@ -107,5 +111,7 @@ conditioningDistribution : :class:`~openturns.Distribution`, the distribution of
 
 Parameters
 ----------
-linkFunction : :class:`~openturns.Function`, the function :math:`g: \Rset^p \rightarrow \Rset^q`, where :math:`p` is the dimension of `conditioningDist` and :math:`q` is the dimension of :math:`\vect{\Theta}`.
+linkFunction : :class:`~openturns.Function`
+    The function :math:`g: \Rset^p \rightarrow \Rset^q`, where :math:`p` is the dimension of `conditioningDist`
+    and :math:`q` is the dimension of :math:`\vect{\Theta}`.
 "
