--- a/python/src/ProjectionStrategyImplementation_doc.i.in
+++ b/python/src/ProjectionStrategyImplementation_doc.i.in
@@ -262,3 +262,34 @@ designProxy : :class:`~openturns.DesignProxy`
 %enddef
 %feature("docstring") OT::ProjectionStrategyImplementation::getDesignProxy
 OT_ProjectionStrategy_getDesignProxy_doc
+
+%define OT_ProjectionStrategy_isLeastSquares_doc
+"Get the least squares flag.
+
+There are two methods to compute the coefficients: integration
+or least squares.
+
+Returns
+-------
+isLeastSquares: bool
+    True if the coefficients are estimated from least squares."
+%enddef
+%feature("docstring") OT::ProjectionStrategyImplementation::isLeastSquares
+OT_ProjectionStrategy_isLeastSquares_doc
+
+// ---------------------------------------------------------------------
+
+%define OT_ProjectionStrategy_isModelSelection_doc
+"Get the model selection flag.
+
+A model selection method can be used to select the coefficients
+of the decomposition which enable to best predict the output.
+Model selection can lead to a sparse functional chaos expansion.
+
+Returns
+-------
+isModelSelection: bool
+    True if the method involves a model selection method."
+%enddef
+%feature("docstring") OT::ProjectionStrategyImplementation::isModelSelection
+OT_ProjectionStrategy_isModelSelection_doc
