--- a/python/src/BasisSequenceFactoryImplementation_doc.i.in
+++ b/python/src/BasisSequenceFactoryImplementation_doc.i.in
@@ -15,7 +15,7 @@ LARS
 Notes
 -----
 BasisSequenceFactory is the interface of the BasisSequenceFactoryImplementation.
-This class is not usable because it has sense only within the
+This class is not usable because it operates only within the
 :class:`~openturns.FunctionalChaosAlgorithm`."
 %enddef
 %feature("docstring") OT::BasisSequenceFactoryImplementation
