--- a/python/src/LsqSolver_doc.i.in
+++ b/python/src/LsqSolver_doc.i.in
@@ -18,7 +18,7 @@ maximumFunctionEvaluation : int
 
 See also
 --------
-Solver, OptimizationAlgorithm
+openturns.Solver, openturns.OptimizationAlgorithm
 
 Notes
 -----
@@ -29,20 +29,17 @@ LsqSolver might fail and not obtain a result lower than the specified threshold,
 %feature("docstring") OT::LsqSolver::solve
 "Solve a system of non-linear equations.
 
-**Available usages**:
-
-    solve(*function, startingPoint*)
 
 Parameters
 ----------
 function : :class:`~openturns.Function`
     The vectorial function of the system of equations :math:`function_i(x) = 0 \forall i \in {1,...,n}` to be solved. Remark that it is an unbounded resolution.
-startingPoint : Point
+startingPoint : class:`~openturns.Point`
     The starting point of the optimization algorithm.
 
 Returns
 -------
-result : Point
+result : :class:`~openturns.Point`
     The result of the root research.
 
 Notes
