--- a/lib/test/CMakeLists.txt
+++ b/lib/test/CMakeLists.txt
@@ -457,6 +457,7 @@ ot_check_test (TruncatedNormalFactory_std)
 ot_check_test (Uniform_std)
 ot_check_test (UniformFactory_std)
 ot_check_test (UniformOverMesh_std)
+ot_check_test (UniformOrderStatistics_std)
 ot_check_test (UserDefined_std)
 ot_check_test (UserDefinedFactory_std)
 ot_check_test (VonMises_std)
