Added the UniformOrderStatistics class
This distribution is the joint distribution of the order statistics of IID uniform random variables over [0, 1].

This distribution is also the kernel of the joint distribution of IID continuous random variables.

--- a/lib/src/Uncertainty/Distribution/CMakeLists.txt
+++ b/lib/src/Uncertainty/Distribution/CMakeLists.txt
@@ -165,6 +165,7 @@ ot_add_source_file (TruncatedNormalFactory.cxx)
 ot_add_source_file (TruncatedOverMesh.cxx)
 ot_add_source_file (Uniform.cxx)
 ot_add_source_file (UniformOverMesh.cxx)
+ot_add_source_file (UniformOrderStatistics.cxx)
 ot_add_source_file (UniformFactory.cxx)
 ot_add_source_file (UniformMuSigma.cxx)
 ot_add_source_file (UserDefined.cxx)
@@ -341,6 +342,7 @@ ot_install_header_file (TruncatedNormal.hxx)
 ot_install_header_file (UniformFactory.hxx)
 ot_install_header_file (Uniform.hxx)
 ot_install_header_file (UniformOverMesh.hxx)
+ot_install_header_file (UniformOrderStatistics.hxx)
 ot_install_header_file (UniformMuSigma.hxx)
 ot_install_header_file (UserDefinedFactory.hxx)
 ot_install_header_file (UserDefined.hxx)
