--- a/python/src/CMakeLists.txt
+++ b/python/src/CMakeLists.txt
@@ -1032,6 +1032,7 @@ ot_add_python_module(experimental experimental_module.i
                      StudentCopulaFactory.i StudentCopulaFactory_doc.i.in
                      TruncatedOverMesh.i TruncatedOverMesh_doc.i.in
                      PosteriorDistribution.i PosteriorDistribution_doc.i.in
+                     UniformOrderStatistics.i UniformOrderStatistics_doc.i.in
                      GeneralizedExtremeValueValidation.i GeneralizedExtremeValueValidation_doc.i.in
                      GeneralizedParetoValidation.i GeneralizedParetoValidation_doc.i.in
                      BoundaryMesher.i BoundaryMesher_doc.i.in
