--- a/python/test/CMakeLists.txt
+++ b/python/test/CMakeLists.txt
@@ -580,6 +580,7 @@ ot_pyinstallcheck_test (TruncatedOverMesh_std IGNOREOUT)
 ot_pyinstallcheck_test (Uniform_std)
 ot_pyinstallcheck_test (UniformFactory_std)
 ot_pyinstallcheck_test (UniformOverMesh_std)
+ot_pyinstallcheck_test (UniformOrderStatistics_std)
 ot_pyinstallcheck_test (UserDefined_std)
 ot_pyinstallcheck_test (UserDefinedFactory_std)
 ot_pyinstallcheck_test (VonMises_std)
