--- a/lib/src/Uncertainty/Distribution/CMakeLists.txt
+++ b/lib/src/Uncertainty/Distribution/CMakeLists.txt
@@ -87,7 +87,9 @@ ot_add_source_file (KFactorFunctions.cxx)
 ot_add_source_file (KPermutationsDistribution.cxx)
 ot_add_source_file (KernelMixture.cxx)
 ot_add_source_file (KernelSmoothing.cxx)
-ot_add_source_file (KolmogorovSmirnovDist.c)
+ot_add_source_file (KolmogorovFunctions.cxx)
+ot_add_source_file (cephes/dd_real.c)
+ot_add_source_file (cephes/kolmogorov.c)
 ot_add_source_file (Laplace.cxx)
 ot_add_source_file (LaplaceFactory.cxx)
 ot_add_source_file (LeastSquaresDistributionFactory.cxx)
