--- a/python/src/CMakeLists.txt
+++ b/python/src/CMakeLists.txt
@@ -1018,6 +1018,9 @@ ot_add_python_module(testing testing_module.i
 ot_add_python_module(experimental experimental_module.i
                      CombinationsDistribution.i CombinationsDistribution_doc.i.in
                      PointConditionalDistribution.i PointConditionalDistribution_doc.i.in
+                     SequentialSamplingAlgorithm.i SequentialSamplingAlgorithm_doc.i.in
+                     SequentialSamplingAlgorithmImplementation.i SequentialSamplingAlgorithmImplementation_doc.i.in
+                     LOLAVoronoi.i LOLAVoronoi_doc.i.in
                      FieldToPointFunctionalChaosAlgorithm.i FieldToPointFunctionalChaosAlgorithm_doc.i.in
                      FieldFunctionalChaosResult.i FieldFunctionalChaosResult_doc.i.in
                      FieldFunctionalChaosSobolIndices.i FieldFunctionalChaosSobolIndices_doc.i.in
