--- a/lib/etc/openturns.conf.in
+++ b/lib/etc/openturns.conf.in
@@ -272,6 +272,14 @@
   <EfficientGlobalOptimization-DefaultParameterEstimationPeriod value_int="1"   />
   <EfficientGlobalOptimization-DefaultOptimizationAlgorithm     value_str="Cobyla" />
 
+  <!-- OT::LOLAVoronoi parameters -->
+  <LOLAVoronoi-UseTruncatedDistribution value_bool="false" />
+  <LOLAVoronoi-MaximumCombinationsNumber value_int="100" />
+  <LOLAVoronoi-DefaultNeighbourhoodCandidatesNumber value_int="15" />
+  <LOLAVoronoi-DefaultVoronoiSamplingSize value_int="1000" />
+  <LOLAVoronoi-DecompositionMethod value_str="Cholesky" />
+  <LOLAVoronoi-NonLinearityAggregationMethod value_str="Maximum" />
+
   <!-- OT::Cobyla parameters -->
   <Cobyla-DefaultRhoBeg value_float="0.1" />
   
