--- a/python/test/CMakeLists.txt
+++ b/python/test/CMakeLists.txt
@@ -765,6 +765,7 @@ ot_pyinstallcheck_test (ANCOVA_std)
 ot_pyinstallcheck_test (FAST_std)
 ot_pyinstallcheck_test (SobolIndicesAlgorithm_std)
 ot_pyinstallcheck_test (SobolIndicesExperiment_std)
+ot_pyinstallcheck_test (RankSobolSensitivityAlgorithm_std IGNOREOUT)
 ot_pyinstallcheck_test (HSICStat_std IGNOREOUT)
 ot_pyinstallcheck_test (HSICEstimatorConditionalSensitivity_std IGNOREOUT)
 ot_pyinstallcheck_test (HSICEstimatorTargetSensitivity_std IGNOREOUT)
