--- a/lib/src/Uncertainty/Algorithm/Sensitivity/CMakeLists.txt
+++ b/lib/src/Uncertainty/Algorithm/Sensitivity/CMakeLists.txt
@@ -27,6 +27,7 @@ ot_add_source_file (FAST.cxx)
 ot_add_source_file (JansenSensitivityAlgorithm.cxx)
 ot_add_source_file (MartinezSensitivityAlgorithm.cxx)
 ot_add_source_file (MauntzKucherenkoSensitivityAlgorithm.cxx)
+ot_add_source_file (RankSobolSensitivityAlgorithm.cxx)
 ot_add_source_file (SaltelliSensitivityAlgorithm.cxx)
 ot_add_source_file (SobolIndicesAlgorithm.cxx)
 ot_add_source_file (SobolIndicesAlgorithmImplementation.cxx)
@@ -48,6 +49,7 @@ ot_install_header_file (FAST.hxx)
 ot_install_header_file (JansenSensitivityAlgorithm.hxx)
 ot_install_header_file (MartinezSensitivityAlgorithm.hxx)
 ot_install_header_file (MauntzKucherenkoSensitivityAlgorithm.hxx)
+ot_install_header_file (RankSobolSensitivityAlgorithm.hxx)
 ot_install_header_file (SaltelliSensitivityAlgorithm.hxx)
 ot_install_header_file (SobolIndicesAlgorithm.hxx)
 ot_install_header_file (SobolIndicesAlgorithmImplementation.hxx)
